IMP: create dedicated cart summary actions

--- a/Magento_Checkout/layout/checkout_cart_index.xml
+++ b/Magento_Checkout/layout/checkout_cart_index.xml
@@ -36,12 +36,17 @@
 
                             <container name="cart.summary" label="Cart Summary Container" htmlTag="div" htmlClass="cart-summary" after="-">
 
-                                <block class="Magento\Checkout\Block\Cart\Shipping"
-                                       name="checkout.cart.shipping"
-                                       as="shipping"
-                                       template="Magento_Checkout::php-cart/shipping.phtml"
-                                       after="checkout.cart.summary.title"
-                                />
+                                <container name="cart.summary.before" after="checkout.cart.summary.title" htmlTag="div" htmlClass="cart-summary-actions my-4">
+                                    <container name="cart.discount" label="Cart Discount Container">
+                                        <block class="Magento\Checkout\Block\Cart\Coupon" name="checkout.cart.coupon" as="coupon" template="Magento_Checkout::php-cart/coupon.phtml"/>
+                                    </container>
+                                    <block
+                                        name="checkout.cart.shipping"
+                                        class="Magento\Checkout\Block\Cart\Shipping"
+                                        as="shipping"
+                                        template="Magento_Checkout::php-cart/shipping.phtml"
+                                    />
+                                </container>
 
                                 <container name="checkout.cart.totals.container" as="totals" label="Shopping Cart Totals">
                                     <block class="Magento\Checkout\Block\Cart\Totals" name="checkout.cart.totals" template="Magento_Checkout::php-cart/totals.phtml">
@@ -75,10 +80,6 @@
                             </block>
 
                             <container name="checkout.cart.widget" as="checkout_cart_widget" label="Shopping Cart Items After" after="cart-items"/>
-
-                            <container name="cart.discount" label="Cart Discount Container" htmlTag="div" htmlClass="cart-discount" after="-">
-                                <block class="Magento\Checkout\Block\Cart\Coupon" name="checkout.cart.coupon" as="coupon" template="Magento_Checkout::php-cart/coupon.phtml"/>
-                            </container>
                         </block>
                     </container>
 
