--- a/Magento_Checkout/templates/php-cart/shipping.phtml
+++ b/Magento_Checkout/templates/php-cart/shipping.phtml
@@ -9,7 +9,7 @@
 declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
-use Hyva\Theme\ViewModel\HeroiconsOutline;
+use Hyva\Theme\ViewModel\LucideIcons;
 use Hyva\Theme\ViewModel\Cart\TotalsOutput;
 use Magento\Checkout\Block\Cart\Shipping;
 use Magento\Framework\Escaper;
@@ -18,8 +18,10 @@ use Magento\Framework\Escaper;
 /** @var Shipping $block */
 /** @var ViewModelRegistry $viewModels */
 
-/** @var HeroiconsOutline $heroicons */
-$heroicons = $viewModels->require(HeroiconsOutline::class);
+/** @var LucideIcons $lucideIcons */
+$lucideIcons = $viewModels->require(LucideIcons::class);
+
+$showIcon = $block->getShowIcon() ?? true;
 
 /** @var TotalsOutput $totalsOutput */
 $totalsOutput = $viewModels->require(TotalsOutput::class);
@@ -356,15 +358,16 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
         @click.prevent="toggleEstimateShipping"
         class="list-none flex justify-between items-center gap-2 py-2 font-semibold"
     >
-        <span>
+        <span class="inline-flex items-center gap-2">
+            <?= $lucideIcons->giftHtml('text-primary', 20, 20, ['aria-hidden' => 'true']); ?>
             <?= $block->getQuote()->isVirtual()
                 ? $escaper->escapeHtml(__('Estimate Tax'))
                 : $escaper->escapeHtml(__('Estimate Shipping and Tax'))
             ?>
         </span>
-        <?= $heroicons->chevronDownHtml('transform group-open:rotate-180', 18, 18, ['aria-hidden' => 'true']); ?>
+        <?= $lucideIcons->chevronDownHtml('transform group-open:rotate-180', 20, 20, ['aria-hidden' => 'true']); ?>
     </summary>
-    <div>
+    <div class="mb-4">
         <form method="post" id="shipping-zip-form" @submit.prevent="fetchTotals()">
             <fieldset class="fieldset estimate" aria-labelledby="block-shipping-title">
                 <p class="field note">
@@ -374,7 +377,7 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
                     ?>
                 </p>
 
-                <div class="field" name="shippingAddress.country_id">
+                <div class="field mt-2" name="shippingAddress.country_id">
 
                     <label class="label">
                         <?= $escaper->escapeHtml(__('Country')) ?>
@@ -394,7 +397,7 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
                 </div>
 
 
-                <div class="field" name="shippingAddress.region_id">
+                <div class="field mt-2" name="shippingAddress.region_id">
 
                     <template x-if="hasAvailableRegions()">
 
@@ -432,7 +435,7 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
                     </template>
                 </div>
 
-                <div class="field" name="shippingAddress.postcode">
+                <div class="field mt-2" name="shippingAddress.postcode">
 
                     <label class="label">
                         <?= $escaper->escapeHtml(__('Zip/Postal Code'))?>
@@ -448,21 +451,23 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
 
                 <template x-if="getEstimatedShippingRateCarriers().length > 0">
                     <div
-                        class="pt-2 relative"
+                        class="relative"
                         role="radiogroup"
                         aria-label="<?= $escaper->escapeHtmlAttr(__('Shipping Methods')) ?>"
                     >
                         <?= $block->getBlockHtml('block-loader') ?>
                         <template x-for="carrier in getEstimatedShippingRateCarriers()" :key="carrier">
                             <div>
-                                <p><strong class="font-semibold" x-text="carrier"></strong></p>
+                                <p><strong class="font-medium" x-text="carrier"></strong></p>
                                 <template x-for="(rate, index) in getRatesForCarrier(carrier)" :key="index">
-                                    <label class="flex items-center px-2 gap-2 cursor-pointer">
-                                        <input class="mr-2 cursor-pointer" type="radio"
-                                               :id="'shipping_method_' + rate.method_code"
-                                               :value="rate.carrier_code + '_' + rate.method_code"
-                                               x-model="shippingMethod"
-                                               @change="updateShippingMethod()">
+                                    <label class="flex items-center gap-2 cursor-pointer">
+                                        <input
+                                            type="radio"
+                                            :id="'shipping_method_' + rate.method_code"
+                                            :value="rate.carrier_code + '_' + rate.method_code"
+                                            x-model="shippingMethod"
+                                            @change="updateShippingMethod()"
+                                        >
                                         <span x-text="rate.method_title" class="break-words shrink hyphens-auto"></span>
                                         <div class="flex flex-col justify-end ml-auto">
                                             <?php if ($totalsOutput->displayCartShippingInclTax() || $totalsOutput->displayCartShippingBoth()): ?>
