--- a/Magento_Catalog/layout/catalog_category_view.xml
+++ b/Magento_Catalog/layout/catalog_category_view.xml
@@ -12,7 +12,7 @@
     <body>
         <referenceBlock name="page.main.title">
             <arguments>
-                <argument name="css_class" xsi:type="string">justify-start text-4xl mb-4</argument>
+                <argument name="css_classes" xsi:type="string">justify-start text-4xl mb-4</argument>
             </arguments>
         </referenceBlock>
         <referenceContainer name="category.view.container" htmlId="category-view-container" htmlClass="category-view container">
