--- a/Magento_Catalog/templates/product/list/item.phtml
+++ b/Magento_Catalog/templates/product/list/item.phtml
@@ -155,7 +155,7 @@ $viewModels->require(BlockJsDependencies::class)->setBlockTemplateDependency($bl
             </span>
         <?php endif; ?>
 
-        <div class="pt-1 text-gray-900"
+        <div class="pt-1"
              x-data="initPriceBox()"
              x-defer="intersect"
              @update-prices-<?= (int)$productId ?>.window="updatePrice($event.detail);"
