--- a/Magento_Weee/templates/php-cart/totals/weee.phtml
+++ b/Magento_Weee/templates/php-cart/totals/weee.phtml
@@ -1,5 +1,5 @@
 <template x-if="segment.code === 'weee_tax'">
-    <div :class="wrapperClass">>
+    <div :class="wrapperClass">
         <div x-html="segment.title"></div>
         <div x-text="hyva.formatPrice(segment.value)" class="justify-self-end"></div>
     </div>
