--- a/Magento_Checkout/templates/php-cart/shipping.phtml
+++ b/Magento_Checkout/templates/php-cart/shipping.phtml
@@ -10,6 +10,7 @@ declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\LucideIcons;
+use Hyva\Theme\ViewModel\HyvaCsp;
 use Hyva\Theme\ViewModel\Cart\TotalsOutput;
 use Magento\Checkout\Block\Cart\Shipping;
 use Magento\Framework\Escaper;
@@ -17,6 +18,7 @@ use Magento\Framework\Escaper;
 /** @var Escaper $escaper */
 /** @var Shipping $block */
 /** @var ViewModelRegistry $viewModels */
+/** @var HyvaCsp $hyvaCsp */
 
 /** @var LucideIcons $lucideIcons */
 $lucideIcons = $viewModels->require(LucideIcons::class);
@@ -346,7 +348,13 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
             }
         }
     }
+
+    window.addEventListener('alpine:init', () => {
+        Alpine.data('initShippingEstimation', initShippingEstimation)
+    }, { once: true });
 </script>
+<?php $hyvaCsp->registerInlineScript() ?>
+
 <details
     id="block-shipping"
     class="estimate-shipping-form group"
