FIX: invalid HTML

--- a/Magento_Catalog/templates/product/compare/list.phtml
+++ b/Magento_Catalog/templates/product/compare/list.phtml
@@ -117,7 +117,7 @@ function initCompareOnCompareList() {
     };
 }
 </script>
-<section>
+<div>
     <button
         type="button"
         x-data="initPrint"
@@ -279,9 +279,9 @@ function initCompareOnCompareList() {
             </tbody>
         </table>
     </div>
-</section>
+</div>
 <?php else: ?>
-<section>
-    <div class="container"><?= $escaper->escapeHtml(__('You have no items to compare.')) ?></div>
-</section>
+<div>
+    <p><?= $escaper->escapeHtml(__('You have no items to compare.')) ?></p>
+</div>
 <?php endif; ?>
