ADD: new slogan

--- a/Magento_Theme/templates/elements/hero.phtml
+++ b/Magento_Theme/templates/elements/hero.phtml
@@ -22,8 +22,8 @@ use Magento\Framework\View\Element\Template;
 /** @var HeroiconsSolid $heroicons */
 $heroicons = $viewModels->require(HeroiconsSolid::class);
 
-$title = "Hyvä Themes";
-$content = "Ecommerce made Happy.";
+$title = "Hyvä Theme";
+$content = "Where good stores begin.";
 $link = "https://hyva.io/";
 $cta = "Visit hyva.io";
 ?>
