--- a/Magento_Theme/templates/html/cart/cart-drawer.phtml
+++ b/Magento_Theme/templates/html/cart/cart-drawer.phtml
@@ -318,7 +318,7 @@ $miniCartOptionShowSku = $block->getShowSku() !== null ? (bool) $block->getShowS
                             <p class="text-lg">
                                 <span x-html="item.qty"></span> x <strong x-html="item.product_name"></strong>
                             </p>
-                            <span x-html="item.product_price"></span>
+                            <span class="price-box" x-html="item.product_price"></span>
                         </div>
                         <template x-if="showDetails">
                             <dl class="table text-sm">
